cthulhu_tests/tests/compile-fails/pattern_params.rs
#[cthulhu::invoke]
fn foo((_a, _b): (i32, bool)) {}

fn main() {}
