cthulhu_tests/tests/compile-fails/pattern_params.stderr
error: failed to invoke cthulhu: failed to convert Rust type to FFI type: Tuple parameters not supported
 --> $DIR/pattern_params.rs:2:18
  |
2 | fn foo((_a, _b): (i32, bool)) {}
  |                  ^^^^^^^^^^^